fix: remove double scrollbar on help modal by setting overflow-y hidden on .modal-help

--- a/webview/css/style.css
+++ b/webview/css/style.css
@@ -2120,6 +2120,7 @@ body.theme-dark * {
 .modal-help {
     width: 640px;
     max-height: 85vh;
+    overflow-y: hidden;
 }
 
 .help-content {
